kustomize/100-ge-single/base/vs.yaml
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: gateway
#   namespace: gloo-system
# spec:
#   isCA: true
#   secretName: gateway
#   duration: 2160h0m0s # 90d
#   renewBefore: 360h0m0s # 15d
#   commonName: gateway
#   dnsNames:
#   - '*'
#   issuerRef:
#     name: ca-issuer
#     kind: ClusterIssuer
#     group: cert-manager.io
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: sample
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: cert-manager
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - exact: /hello
      directResponseAction:
        status: 200
        body: hello, world
    - matchers:
      - prefix: /httpbin
      options:
        prefixRewrite: '/'
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system
